Updated the team list.

--- a/teamleden/index.html
+++ b/teamleden/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="../styles/style.css" type="text/css" />
 </head>
 <body>
+<!--
 	<h1>Teamleden 0sv2</h1>
 	<h2>Team 1</h2>
 	<ul>
@@ -32,8 +33,9 @@
 		<li><a href="bas.html">Bas Mulder</a></li>
 		<li><a href="jordy.html">Jordy Stevelink</a></li>
 	</ul>
-	
+-->
 	<h1>Teamleden 0sv1</h1>
+<!--	
 	<h2>Team 1</h2>
 	<ul>
 		<li><a href="frederik.html">Frederik Bonte</a></li>
@@ -43,16 +45,17 @@
 		<li><a href="emrullah.html">Emrullah Galleli</a></li>
 		<li><a href="sid.html">Sid Struis</a></li>
 	</ul>
-	
+-->	
 	<h2>Team 2</h2>
 	<ul>
-		<li><a href="frederik.html">Frederik Bonte</a></li>
-		<li><a href="wendy.html">Wendy He</a></li>
-		<li><a href="berkay.html">Berkay Kuru</a></li>
-		<li><a href="fiona.html">Fiona Lage Venterink</a></li>
-		<li><a href="aron.html">Aron ter Steege</a></li>
+		<li><a href="frederik.html">Frederik Bonte</a> (FrederikBonte)</li>
+		<li><a href="tom.html">Tom Vegelien</a> (404spoon404)</li>
+		<li><a href="wendy.html">Wendy He</a> (LilFanges)</li>
+		<li><a href="berkay.html">Berkay Kuru</a> (BerkayKuru)</li>
+		<li><a href="fiona.html">Fiona Lage Venterink</a> (Fionatjel)</li>
+		<li><a href="aron.html">Aron ter Steege</a> (aron0546)</li>
 	</ul>
-	
+<!--	
 	<h2>Team 3</h2>
 	<ul>
 		<li><a href="frederik.html">Frederik Bonte</a></li>
@@ -61,5 +64,6 @@
 		<li><a href="iwan.html">Iwan Westerdijk</a></li>
 		<li><a href="chris.html">Chris Zomer</a></li>
 	</ul>
+-->
 </body>
 </html>
