--- a/teamleden/aron.html
+++ b/teamleden/aron.html
@@ -4,28 +4,24 @@
 	<link rel="stylesheet" href="../styles/style.css" type="text/css" />
 </head>
 <body>
-	<img src="../resources/images/fbonte.png" width="200px" align="right" />
+	<img src="../resources/images/aron.jpeg" width="200px" align="right" />
 	<h1>Aron</h1>
-	<h2>Lead developer</h2>
+	<h2>CEO</h2>
 	<p class="cinfo">
-		Frederik is de lead developer voor dit team.<br />
-		email adres : <b>fbe02@rocvantwente.nl</b><br />
-		telefoon : <b>(+31)639477287</b><br />
-		github.com : <b>FrederikBonte</b>
+		Aron is de lead developer voor dit team.<br />
+		email adres : <b>0329665@rocvantwente.nl</b><br />
+		telefoon : <b>(+31)6*******</b><br />
+		github.com : <b>Aron0546</b>
 	</p>
 	<h2>Hobbies en interesses</h2>
-	<h3>Boeken (scifi en fantasy)</h3>
+
 	<p>
-		Brandon Sanderson, Andy Weir, Robert Jordan, Tolkien, Robin Hobb, Naomi Novik, Richard Schwartz, C.S. Lewis, Frank Peretti, Christopher Paolini, etc.<br />
-		En natuurlijk de classics: A.C. Clarke, Larry Niven, Lord Dunsany, Olaf Stapledon, Heinlein, Asimov, Brin, etc.		
+		In het weekend met de boys :<
 	</p>
-	<h3>Boardgames</h3>
+	<h3>Games</h3>
 	<p>
-		Eclipse, Terra Mystica, Machi Koro (nights), Great Western Trail, Power Grid, Agricola, Wingspan, etc.
+		GTA V
 	</p>
-	<h3>Computer games</h3>
-	<p>
-		Kerbal Space Program, Astroneer, Avorion, TIS-100, Shenzhen I/O, Infinifactory, Factorio, Satisfactory, Factory Town, Minecraft, ComputerCraft, Shapez.io, Terraria, Slime Rancher, etc.
-	</p>
+
 </body>
 </html>
