edit html color

--- a/choose_color.html
+++ b/choose_color.html
@@ -30,6 +30,8 @@
 			<li>white</li>
 			<li>black</li>
 			<li>blue</li>
+			<li>paars</li>
+			<li>aardappel</li>
 			<!-- @TODO: Add more options! -->
 			<!-- @TODO: Ask the other team to also supply those colors!!! -->
 		</ul>
